# SpectrumIDEV3

./: .gitignore  Autocompletion.md  README.md
Documents/ALS/: API-Reference.md  Architecture.md  DEVELOPMENT.md  Development-Guide.md  Executive-Summary.md  FUTURE-PLANNING.md  INPUT-OUTPUT-FIX.md  LSP-SPECIFICATION.md  LSP-Server-Design.md  PROJECT-STATUS.md  Phase1-Status.md  Project-Structure.md  README.md  Roadmap.md  TECHNICAL-ARCHITECTURE.md  Technical-Specification.md
Source/LspClient/: DocumentManager.cpp  DocumentManager.h  ErrorManager.cpp  ErrorManager.h  LspFeatureManager.cpp  LspFeatureManager.h  LspProcess.cpp  LspProcess.h  LspProtocol.cpp  LspProtocol.h  SpectrumLspClient.cpp  SpectrumLspClient.h
Source/Settings/: SPSettings.cpp  SPSettings.h
Source/TextEditor/: AlifComplete.cpp  AlifComplete.h  ArabicCompletionWidget.cpp  ArabicCompletionWidget.h  SPEditor.cpp  SPEditor.h
Spectrum/: Spectrum.cpp  Spectrum.h  Spectrum.pro
als/: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
als/include/als/core/: JsonRpcProtocol.h  LspServer.h  RequestDispatcher.h  ServerConfig.h  ThreadPool.h
als/include/als/logging/: Logger.h
als/scripts/: build.bat  build.sh  run-tests.sh  setup-dev.sh
als/src/: main.cpp
als/src/analysis/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
als/src/core/: JsonRpcProtocol.cpp  Logger.cpp  LspServer.cpp  RequestDispatcher.cpp  ServerConfig.cpp  ThreadPool.cpp  Utils.cpp
als/src/features/: ArabicCompletionDatabase.cpp  ArabicCompletionDatabase.h  ArabicCompletionItem.cpp  ArabicCompletionItem.h  CompletionProvider.cpp  CompletionProvider.h
als/src/logging/: Logger.cpp
als/tests/: CMakeLists.txt  debug_stream.cpp  test_config.json.in  test_jsonrpc_protocol.cpp  test_logging_integration.cpp  test_lsp_messages.cpp  test_main.cpp  test_protocol_compliance.cpp  test_request_dispatcher.cpp  test_threadpool.cpp
